--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </section>
         <section class="map">
-            <div id="map" style="width: 100%; height: 498px"></div>
+            <div id="map" style="width: 100%; height: 600px"></div>
                 <script src="http://api-maps.yandex.ru/2.1/?load=package.full&lang=ru-RU" type="text/javascript"></script>
 
                 <script type="text/javascript">
@@ -118,6 +118,66 @@
                     }
                     </script>
         </section>
+        
     </main>
+<!--    Footer - Подвал     -->
+    <footer>
+       <section class="footer">
+           <div class="footer-box1">
+               <div class="footer-content">
+                   <h6>О проэкте</h6>
+                   <ul>
+                       <li><a href="">Как это работает</a></li>
+                       <li><a href="">Вопрос/ответ</a></li>
+                       <li><a href="">Новости</a></li>
+                       <li><a href="">Вакансии</a></li>
+                       <li><a href="">Условия использования</a></li>
+                       <li><a href="">Конфидициальность</a></li>
+                   </ul>
+               </div>
+               <div class="footer-content">
+                   <h6>Автовладельцам</h6>
+                   <ul>
+                       <li><a href="">Поиск</a></li>
+                       <li><a href="">Расширенный поиск</a></li>
+                       <li><a href="">Автотехцентры</a></li>
+                       <li><a href="">Шиномонтажи</a></li>
+                       <li><a href="">Автомойки</a></li>
+                       <li><a href="">Тюнинг-ателье</a></li>
+                       <li><a href="">АЗС</a></li>
+                       <li><a href="">Перечень услуг</a></li>
+                   </ul>
+               </div>
+               <div class="footer-content">
+                   <h6>Компаниям</h6>
+                   <ul>
+                       <li><a href="">Добавть компанию</a></li>
+                    </ul>
+                    <h6>Личный кабинет</h6>
+                    <ul>  
+                       <li><a href="">Вход</a></li>
+                       <li><a href="">Регистрация</a></li>
+                   </ul>
+               </div>            
+           </div>
+           <div class="footer-box2">
+               <h6>Мы в социальных сетях</h6>
+               <ul>
+                   <li><a href=""><img src="images/vkontakte.jpg" alt="Вконтакте"></a></li>
+                   <li><a href=""><img src="images/fasebook.jpg" alt="Фэйсбук"></a></li>
+                   <li><a href=""><img src="images/youtube.jpg" alt="Ютуб"></a></li>
+                   <li><a href=""><img src="images/twitter.jpg" alt="Твиттер"></a></li>
+                   <li><a href=""><img src="images/google.jpg" alt="Гугл+"></a></li>
+               </ul>
+               <a href="" class="qwestion">
+                  <img src="images/qwestion.jpg" alt="Вопрос">
+                   <h6>    Остались  вопросы?</h6>
+               </a>
+           </div>
+       </section>
+        <section class="copyright">
+           <p>&copy; 2015-2016 BiBiHelper - информационная автомобильная система</p>
+        </section>
+    </footer> 
 </body>
 </html>
