Добавил инфо о маркерах на карте

--- a/index.html
+++ b/index.html
@@ -117,6 +117,43 @@
                         myMap.geoObjects.add(clusterer);
                     }
                     </script>
+                    
+            <div class="marker">
+                <div class="marker-box1">
+                    <ul>
+                        <li>
+                            <img src="images/n-avtoservis.jpg" alt="">
+                            <p>Неофициальный автосервис</p>
+                        </li>
+                        <li>
+                            <img src="images/shinimontaj.jpg" alt="">
+                            <p>Шиномонтаж</p>
+                        </li>
+                        <li>
+                            <img src="images/tuning-atelie.jpg" alt="">
+                            <p>Тюнинг-ателье</p>
+                        </li>
+                        <li>
+                            <img src="images/o-avtoservis.jpg" alt="">
+                            <p>Официальный автосервис</p>
+                        </li>
+                        <li>
+                            <img src="images/avtomoika.jpg" alt="">
+                            <p>Автомойки</p>
+                        </li>
+                        <li>
+                            <img src="images/azs.jpg" alt="">
+                            <p>АЗС</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="marker-box2">
+                    <span>
+                        <img src="images/neskolko-tochek.jpg" alt="">
+                        <p>Несколько точек обслуживания рядом</p>
+                    </span>
+                </div>
+            </div>
         </section>
         
     </main>
@@ -125,7 +162,7 @@
        <section class="footer">
            <div class="footer-box1">
                <div class="footer-content">
-                   <h6>О проэкте</h6>
+                   <h6>О проекте</h6>
                    <ul>
                        <li><a href="">Как это работает</a></li>
                        <li><a href="">Вопрос/ответ</a></li>
