--- a/index.html
+++ b/index.html
@@ -155,9 +155,36 @@
                 </div>
             </div>
         </section>
-        
+        <section class="instruction">
+            <div class="instruction-box1">
+                <h2>Как это <span>работает</span>?</h2>
+                <p>3 простых шага для поиска необходимой услуги в BiBiHelper</p>
+            </div>
+            <div class="instruction-box2">
+                <div class="instruction-note">
+                   <div class="istruction-content">
+                        <span>1</span>
+                        <p>Автовладелец вводит информацию об автомобиле и описание необходимых работ.</p>
+                    </div>
+                </div>
+                <div class="instruction-note">
+                   <div class="istruction-content">
+                        <span>2</span>
+                        <p>Система предлагает автосервисы с учётом их геграфического расположения, рейтинга, цен и сроков.</p>
+                    </div>
+                </div>
+                <div class="instruction-note">
+                   <div class="istruction-content">
+                        <span>3</span>
+                        <p>В карточке автосервиса можно получить более детальную информацию  и записаться на ремонт в удобное время.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-<!--    Footer - Подвал     -->
+    
+<!--                                Footer - Подвал                            -->
+   
     <footer>
        <section class="footer">
            <div class="footer-box1">
