Исправления (убрал лишний div)

--- a/index.html
+++ b/index.html
@@ -188,29 +188,28 @@
             </div>
             <div class="servises-box2"> 
                 <div class="servises-content">             
-                <img src="images/for-avtovladel.jpg" alt="Для автовладельцев">
-                <h3>Для автовладельцев</h3>
-                <div class="clearfix"></div>
-                <p>Выбор лучшего автотехцентра рядом с домом с учётом его рейтинга и запись на ремонт в удобное время</p>
-                <p>Отправка ОН-лайн запроса для уточнения цен, сроков и консультация эксперта</p>
-                <p>Мониторинг акций и скидок в автотехцентрах</p>
-                <p>Отправка отзыва о работе автотехцентра или конкретного мастера</p>
-                <p>Поиск автозапчастей из наличия а автотехцентрах города</p>
-                <p>Просмотр вакансий в автотехцентрах для соискателей</p> 
+                    <img src="images/for-avtovladel.jpg" alt="Для автовладельцев">
+                    <h3>Для автовладельцев</h3>
+                    <div class="clearfix"></div>
+                    <p>Выбор лучшего автотехцентра рядом с домом с учётом его рейтинга и запись на ремонт в удобное время</p>
+                    <p>Отправка ОН-лайн запроса для уточнения цен, сроков и консультация эксперта</p>
+                    <p>Мониторинг акций и скидок в автотехцентрах</p>
+                    <p>Отправка отзыва о работе автотехцентра или конкретного мастера</p>
+                    <p>Поиск автозапчастей из наличия а автотехцентрах города</p>
+                    <p>Просмотр вакансий в автотехцентрах для соискателей</p> 
                 </div>              
             </div>
             <div class="servises-box3"> 
                <div class="servises-content">              
-                <img src="images/for-company.jpg" alt="Для компаний">
-                <h3>Для компаний</h3>
-                <div class="clearfix"></div>
-                <p>Привлечение новых клиентов и удержание текущих</p>
-                <p>Продажа складских остатков автозапчастей</p>
-                <p>Подбор квалифицированных сотрудников</p>
-                <p>Качественная реклама своего автотехцентра, информация о проводимых акциях</p 
-                </div>         
-            </div>
-            </div>
+                    <img src="images/for-company.jpg" alt="Для компаний">
+                    <h3>Для компаний</h3>
+                    <div class="clearfix"></div>
+                    <p>Привлечение новых клиентов и удержание текущих</p>
+                    <p>Продажа складских остатков автозапчастей</p>
+                    <p>Подбор квалифицированных сотрудников</p>
+                    <p>Качественная реклама своего автотехцентра, информация о проводимых акция </p>
+                </div>     
+            </div>                    
         </section>
     </main>
     
