Добавил блеск кнопке Подобрать

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Главная</title>
     <meta charset="UTF-8">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -29,7 +29,7 @@
     </header>
     <main>
         <section class="select">
-            <div class="select-box">
+            <div class="select-box">                
                 <select class="select-avto">
                    <option value="">Марка автомобиля</option>
                    <option value="">Audi</option>
@@ -37,6 +37,7 @@
                    <option value="">BMW</option>
                    <option value="">Opel</option>
                 </select>
+                <span class="select-cursor">&#8250;</span>
             </div>
             <div class="select-box">
                 <select class="select-work">
@@ -46,6 +47,7 @@
                     <option value="">Электрика</option>
                     <option value="">Покраска</option>
                 </select>
+                <span class="select-cursor">&#8250;</span>
             </div>
             <div class="select-box">
                 <input class="select-button" type="button" value="Подобрать">
@@ -269,9 +271,9 @@
                </a>
            </div>
        </section>
-        <section class="copyright">
+        <div class="copyright">
            <p>&copy; 2015-2016 BiBiHelper - информационная автомобильная система</p>
-        </section>
+        </div>
     </footer> 
 </body>
 </html>
