поменял span на div, поработал с кнопкой

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                     </ul>
                 </div>
                 <div class="marker-box2">
-                    <span>
+                    <div>
                         <img src="images/neskolko-tochek.jpg" alt="">
                         <p>Несколько точек обслуживания рядом</p>
-                    </span>
+                    </div>
                 </div>
             </div>
         </section>
