--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <section class="header logo">
+        <div class="header logo">
             <div class="logo-box">
                 <a href=""><img src="images/logo.jpg" alt="lotogip"></a>
             </div>
-        </section>
-        <section class="header info">
+        </div>
+        <div class="header info">
             <div class="info-box"></div>
-        </section>
+        </div>
         <section class="header slogan">
             <div class="slogan-box">
                 <h1>Сломалось авто? Мы <span>поможем</span>!</h1>
@@ -28,7 +28,7 @@
         <div class="clearfix"></div>
     </header>
     <main>
-        <section class="select">
+        <div class="select">
             <div class="select-box">                
                 <select class="select-avto">
                    <option value="">Марка автомобиля</option>
@@ -52,8 +52,8 @@
             <div class="select-box">
                 <input class="select-button" type="button" value="Подобрать">
             </div>
-        </section>
-        <section class="map">
+        </div>
+        <div class="map">
             <div id="map" style="width: 100%; height: 600px"></div>
                 <script src="http://api-maps.yandex.ru/2.1/?load=package.full&lang=ru-RU" type="text/javascript"></script>
 
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <section class="instruction">
             <div class="instruction-box1">
                 <h2>Как это <span>работает</span>?</h2>
