Добавил блок Сейчас ищут

--- a/index.html
+++ b/index.html
@@ -213,6 +213,22 @@
                 </div>     
             </div>                    
         </section>
+        <section class="now-search">
+            <h2>Сейчас <span>ищут</span></h2>
+            <p>Текущие онлайн запросы в BiBiHelper</p>
+            <ul>
+                <li>BMW X6 <span>&#8250;</span> Ремонт КПП</li>
+                <li>Chevrolet Cruze <span>&#8250;</span> Кузовной ремонт</li>
+                <li>Mitsubishi Lancer <span>&#8250;</span> Экспресс замена масла</li>
+                <li>Renault Clio <span>&#8250;</span> Замена колодок</li>
+                <li>Citroen C4 <span>&#8250;</span> Аэрография</li>
+            </ul>
+            <div class="now-search-button">
+                <input type="button" class="now-search-button1" value="Подобрать">
+                <span>или</span>
+                <input type="button" class="now-search-button2" value="Расширенный поиск">
+            </div>
+        </section>
     </main>
     
 <!--                                Footer - Подвал                            -->
