добавил меню отзывчивасти

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </script>
                     
             <div class="marker">
-                <div class="marker-box1">
+                <div class="marker-box1 clearfix">
                     <ul>
                         <li>
                             <img src="images/n-avtoservis.jpg" alt="">
@@ -178,7 +178,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="marker-box2">
+                <div class="marker-box2 clearfix">
                     <div>
                         <img src="images/neskolko-tochek.jpg" alt="">
                         <p>Несколько точек обслуживания рядом</p>
