добавил ссылки соц-сетей

--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
            <div class="footer-box2">
                <h6>Мы в социальных сетях</h6>
                <ul>
-                   <li><a href=""><img src="images/vkontakte.jpg" alt="Вконтакте"></a></li>
-                   <li><a href=""><img src="images/fasebook.jpg" alt="Фэйсбук"></a></li>
-                   <li><a href=""><img src="images/youtube.jpg" alt="Ютуб"></a></li>
-                   <li><a href=""><img src="images/twitter.jpg" alt="Твиттер"></a></li>
-                   <li><a href=""><img src="images/google.jpg" alt="Гугл+"></a></li>
+                   <li><a href="https://vk.com/" target="_blank"><img src="images/vkontakte.jpg" alt="Вконтакте"></a></li>
+                   <li><a href="https://www.facebook.com/" target="_blank"><img src="images/fasebook.jpg" alt="Фэйсбук"></a></li>
+                   <li><a href="https://www.youtube.com/" target="_blank"><img src="images/youtube.jpg" alt="Ютуб"></a></li>
+                   <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.jpg" alt="Твиттер"></a></li>
+                   <li><a href="https://plus.google.com/" target="_blank"><img src="images/google.jpg" alt="Гугл+"></a></li>
                </ul>
                <a href="" class="qwestion">
                   <img src="images/qwestion.jpg" alt="Вопрос">
