--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
             <h2>Сейчас <span>ищут</span></h2>
             <p>Текущие онлайн запросы в BiBiHelper</p>
             <ul>
-                <li>BMW X6 <span>&#8250;</span> Ремонт КПП</li>
-                <li>Chevrolet Cruze <span>&#8250;</span> Кузовной ремонт</li>
-                <li>Mitsubishi Lancer <span>&#8250;</span> Экспресс замена масла</li>
-                <li>Renault Clio <span>&#8250;</span> Замена колодок</li>
-                <li>Citroen C4 <span>&#8250;</span> Аэрография</li>
+                <li><span class="now-search-left">BMW X6</span> <span class="now-search-right">&#8250; Ремонт КПП</span></li>
+                <li><span class="now-search-left">Chevrolet Cruze</span> <span class="now-search-right">&#8250; Кузовной ремонт</span></li>
+                <li><span class="now-search-left">Mitsubishi Lancer</span> <span class="now-search-right">&#8250; Экспресс замена масла</span></li>
+                <li><span class="now-search-left">Renault Clio</span> <span class="now-search-right">&#8250; Замена колодок</span></li>
+                <li><span class="now-search-left">Citroen C4</span> <span class="now-search-right">&#8250; Аэрография</span></li>
             </ul>
             <div class="now-search-button">
                 <input type="button" class="now-search-button1" value="Подобрать">
