ещё раз победил шрифт в мозиле

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <p>Хранение истории ремонта и ранее просмотренных предложений</p>
                     <p>Сравнение цен на услуги по ремонту автомобиля</p>
                     <p>Онлайн запись в автосервис и получение консультации от экспертов</p>
-                    <p>уведомление об акциях и скидках от компаний-партнёров</p> 
+                    <p>Уведомление об акциях и скидках от компаний-партнёров</p> 
                 </div>              
             </div>                   
         </section>
