Поменял подключение шрифтов

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="instruction-note col-md-4 col-sm-12">
                    <div class="istruction-content">
                         <span>3</span>
-                        <p>Запишитесь на приём в удобное для вас время.</p>
+                        <p>Запишитесь на ремонт в удобное для вас время.</p>
                         <img src="images/phone-servises.png" alt="зпись">
                     </div>
                 </div>
@@ -149,7 +149,7 @@
         <section class="servises clearfix">
             <div class="servises-box1">
                 <h2>В чём <span>преимущества</span> BiBiHelper?</h2>
-                <p>Удобный, Быстрый, Простой</p>            
+                <p>Удобный. Быстрый. Простой</p>            
             </div>
             <div class="servises-box2"> 
                 <div class="servises-content">             
