--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <section class="instruction">
             <div class="instruction-box1">
-                <h2>Как это <span>работает</span>?</h2>
+                <h2>Как это <span>работает</span>!</h2>
                 <p>3 простых шага для поиска лучшего автосервиса</p>
             </div>
             <div class="instruction-box2 clearfix">
@@ -148,7 +148,7 @@
         </section>
         <section class="servises clearfix">
             <div class="servises-box1">
-                <h2>В чём <span>преимущества</span> BiBiHelper?</h2>
+                <h2>В чём <span>преимущества</span> BiBiHelper!</h2>
                 <p>Удобный. Быстрый. Простой</p>            
             </div>
             <div class="servises-box2"> 
