Изменил расположение кнопок с низу

--- a/index.html
+++ b/index.html
@@ -191,7 +191,15 @@
             </div>                   
         </section>
         <section class="now-search">
-            
+            <h2>Сейчас <span>ищут</span></h2>
+            <p>Текущие онлайн запросы в BiBiHelper</p>
+            <ul>
+                <li><span class="now-search-left">BMW X6</span> <span class="now-search-right">&#8250; Ремонт КПП</span></li>
+                <li><span class="now-search-left">Chevrolet Cruze</span> <span class="now-search-right">&#8250; Кузовной ремонт</span></li>
+                <li><span class="now-search-left">Mitsubishi Lancer</span> <span class="now-search-right">&#8250; Экспресс замена масла</span></li>
+                <li><span class="now-search-left">Renault Clio</span> <span class="now-search-right">&#8250; Замена колодок</span></li>
+                <li><span class="now-search-left">Citroen C4</span> <span class="now-search-right">&#8250; Аэрография</span></li>
+            </ul>
             <div class="now-search-button">
                 <input type="button" class="now-search-button1" value="Найти автосервис">
                 <span>или</span>
