--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                <div class="col-md-4 col-sm-4 col-xs-6 footer-content">
                    <h6>Компаниям</h6>
                    <ul>
-                       <li><a href="">Добавть компанию</a></li>
+                       <li><a href="">Добавить компанию</a></li>
                     </ul>
                     <h6 class="self-room">Личный кабинет</h6>
                     <ul>  
