--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             
 <!--            ////////////////////////////////////////////////////////            -->
       
-              <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=Y4WI9jh6Fj7dr-r6SxZEm540pI18QlK6&width=100%&height=600&lang=ru_RU&sourceType=constructor"></script>
+             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=HPgeXyO3BRZYwC7D9_crKx54MFGKYpG7&amp;width=100%&amp;height=500&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
 
 <!--                  //////////////////////////////////////////////////////                -->
                 <div class="marker">
